# kenlm-correction

./: .gitignore  README.md  api.py  app.py  config.yaml  pyproject.toml  reference_phonemes.py  requirements.txt  transcribe.py
docs/: fingerprint-explanation.md  implementation-plan.md  running-locally.md  testing-guide.md
eval/: README.md  audio_to_phonemes.py  run_eval.py  test_set.json
src/: candidate_gen.py  confidence.py  fusion.py  pipeline.py  scoring.py
src/dysarthric_correction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
